--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,29 @@ body{
     color: #f5f6f7;
     width:100%;
     height:100vh;
+    font-family: Tahoma;
+    font-size: 16px;
+}
+
+h1, p{
+    margin: 1em auto;
+    text-align: center;
 }
 
 label{
     display:block;
     margin:.5rem 0;
+}
+
+form{
+    width: 60vw;
+    max-width:500px;
+    min-width: 300px;
+    margin: 0 auto;
+}
+
+fieldset{
+    border:none;
+    padding: 2rem 0;
+    border-bottom: 3px solid rgb(59, 59, 79);
 }
