--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,45 @@ fieldset{
     padding: 2rem 0;
     border-bottom: 3px solid rgb(59, 59, 79);
 }
+
+fieldset:last-of-type {
+    border-bottom: none;
+  }
+
+textarea, input, select{
+    width: 100%;
+    margin: 10px 0 0 0;
+}
+
+input, textarea{
+    background-color:#0a0a23;
+    border: 1px solid #0a0a23;
+    color:#fff;
+    min-height: 2em;  
+}
+
+.inline{
+    width: unset;
+    margin: 0 0.5em 0 0;
+    vertical-align: middle;
+    display: inline;
+}
+
+input[type="submit"]{
+    display:block;
+    width: 60%;
+    min-width: 300px;
+    margin: 1em auto;
+    height: 2em;
+    font-size: 1.1rem;
+    background-color:#3b3b4f;
+    border-color: white;
+}
+
+input[type="file"]{
+    padding: 1px 2px;
+}
+
+a{
+    color: #dfdfe2;
+}
